# TrigScint

./: CMakeLists.txt  LDMX_Histogram_Plotter.C  README.md
exampleConfigs/: DQM.py  dataShaper.py  runTSsim2.py  runTSsimHitEff.py  runTestBeamHitRecoCondition.py  runTestBeamHitReco_Reprocess.py  testChargeAnalyzer.py  testCrazyAnalyzer.py  testDecidePulseWidth.py  testSearchPeak.py
include/TrigScint/: ADCAnalyzer.h  AnalyticalRecHitProducer.h  ChargeAnalyzer.h  ChargeAnalyzerCrazy.h  HitAnalyzer.h  NumericalRecHitProducer.h  PulseFittingRecHitProducer.h  QIEAnalyzer.h  TestBeamDQM.h  TestBeamDecideWidth.h  TrigScintClusterProducer.h  TrigScintDigiProducer.h  TrigScintRecHitProducer.h  TrigScintTrackProducer.h  TruthHitProducer.h  dataShaper.h
python/: DQM.py  qieFormat.py  trigScint.py  truthHits.py
rootMacros/: LDMX_CombineFits.C  LDMX_Histogram_Fitter.C  LDMX_Histogram_Integrator.C  LDMX_Histogram_Plotter.C  LDMX_IntegrationWindowPlotter.C  LDMX_IntegrationWindowTyper.C  LDMX_MultipleFitPlotter.C  LDMX_PlotAllWindow.C  LDMX_PlotFlags.C  LDMX_SummarizeMipResponses.C
src/TrigScint/: ADCAnalyzer.cxx  AnalyticalRecHitProducer.cxx  ChargeAnalyzer.cxx  ChargeAnalyzerCrazy.cxx  HitAnalyzer.cxx  NumericalRecHitProducer.cxx  PulseFittingRecHitProducer.cxx  QIEAnalyzer.cxx  QIEDecoder.cxx  TestBeamDQM.cxx  TestBeamDecideWidth.cxx  TrigScintDigiProducer.cxx  dataShaper.cxx  (+2 more)
util/: ChangedPlotterModOverlay.C  cpyBash.sh  extractPEPeakIntegrals.C  extractPEPeakIntegrals_MultipleRootFiles.C  extractPEPeakIntegrals_excludePedestal.C  extractResponse_final.C  runReformatting.sh
(+5 files in other folders)
